--- a/Insurance-app-main/src/Components/AdminDashboard/Attendance/attendance.css
+++ b/Insurance-app-main/src/Components/AdminDashboard/Attendance/attendance.css
@@ -1,48 +1,190 @@
 .attendance-container {
-    padding: 10px;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    max-width: 90%;
-    margin: auto;
-    margin-top: 10%;
-  }
-  
-  .attendance-container h1 {
-    text-align: center;
-    margin-bottom: 30px;
-    color: #333;
-  }
-  
-  .attendance {
-    height: 70vh;
-    overflow-y: auto;
-    border: 1px solid #ccc;
-  }
-  
-  .attend-1 {
-    width: 100%;
-    border-collapse: collapse;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-  }
-  
-  .attend-1 th,
-  .attend-1 td {
-    padding: 8px;
-    border: 1px solid #ddd;
-    text-align: left;
-  }
-  
-  .attend-1 th {
-    background-color: #333;
-    color: #fff;
-    position: sticky;
-    top: 0;
-  }
-  
-  .attend-1 tr:nth-child(even) {
-    background-color: #f9f9f9;
-  }
-  
-  .attend-1 tr:hover {
-    background-color: #f1f1f1;
-  }
-  
+  margin-top: 50px;
+}
+
+.admin-header-attendance {
+  display: flex;
+  align-items: center !important;
+  justify-content: space-between;
+  justify-content: flex-end;
+  margin: auto;
+  padding: 15px;
+  border-bottom: 1px solid #aaaaaa;
+  border-top: 1px solid #aaaaaa;
+  /* background-color: rgba(128,128,128,0.1); */
+  background-color: #edeeee;
+  position: relative;
+}
+
+.tablerow-attendance {
+  font-size: 25px;
+  font-weight: bold;
+  position: absolute;
+  left: 2%;
+  top: 25%;
+  font-family: "Poppins", sans-serif;
+}
+
+.attendance-header {
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+  gap: 15px;
+}
+
+.attendance-header .upload-button5,
+.attendance-header .upload-button6 {
+    /* color: white; */
+    color: #828181;
+    /* border: none; */
+    padding: 3px 7px;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+.upload-button5 {
+    border:1px solid #27ae60;
+    transition: transform 0.5s ease,color 0.5s ease;
+}
+
+.upload-button6 {
+    border:1px solid #e67e22;
+    transition: transform 0.5s ease,color 0.5s ease;
+}
+
+.upload-button5:hover{
+    transform: scale(1.05);
+    background-color: rgba(0,128,0,0.8);
+}
+
+.upload-button5:hover .excel-icon-attendance{
+    color: whitesmoke;
+}
+
+.upload-button6:hover {
+    transform: scale(1.05);
+    background-color: rgba(225,165,0,0.9);
+}
+
+.upload-button6:hover .upload-icon-attendance{
+    color: whitesmoke;
+}
+
+.upload-button5 .excel-icon-attendance{
+    color: #27ae60;
+    font-size: 25px;
+}
+
+.upload-button6 .upload-icon-attendance{
+    color: #e67e22;
+    font-size: 25px;
+}
+
+.file-label-attendance {
+    border: 1px solid  rgb(122, 122, 122);
+    padding: 5px 10px;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: all 0.5s linear;
+    color: #5b5b5b
+}
+
+.file-label-attendance:hover,
+.file-label-attendance:hover .label-name-admin
+{
+    background-color: rgba(0,0,128,0.8);
+    color: whitesmoke;
+    border-color: navy;
+}
+
+.attendance-header .file-input {
+  display: none;
+}
+
+.users-count-attendance{
+  position: absolute;
+  left: 2%;
+  font-family: "Poppins",sans-serif;
+  font-size: 17px;
+}
+
+.admin-head-search-attendance {
+  display: flex;
+  gap: 15px;
+  justify-content: flex-end;
+  align-items: center;
+  flex-wrap: wrap;
+  padding: 25px;
+  position: relative;
+}
+
+.search-input-attendance {
+  width: 300px;
+  padding: 6px 0 6px 10px;
+  border: 1px solid #b1b1b1;
+  border-radius: 15px;
+  transition: width 0.4s ease, opacity 0.4s ease;
+}
+
+.search-input-attendance::placeholder {
+  color: #828181;
+  font-size: bold;
+  position: absolute;
+  left: 15px;
+}
+
+.search-input-attendance:focus{
+  border-color: #828181;
+  outline: none;
+}
+
+.search-input-res-attendance{
+  width: 250px;
+  padding: 5px 0 5px 10px;
+  border: 1px solid #ccc;
+  border-radius: 50px;
+}
+
+.searchbar-res-attendance {
+  display: none;
+}
+
+.attendance-container h1 {
+  text-align: center;
+  margin-bottom: 30px;
+  color: #333;
+}
+
+.attendance {
+  height: 70vh;
+  overflow-y: auto;
+  border: 1px solid #ccc;
+}
+
+.attend-1 {
+  width: 100%;
+  border-collapse: collapse;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+.attend-1 th,
+.attend-1 td {
+  padding: 8px;
+  border: 1px solid #ddd;
+  text-align: left;
+}
+
+.attend-1 th {
+  background-color: #333;
+  color: #fff;
+  position: sticky;
+  top: 0;
+}
+
+.attend-1 tr:nth-child(even) {
+  background-color: #f9f9f9;
+}
+
+.attend-1 tr:hover {
+  background-color: #f1f1f1;
+}
