--- a/Insurance-app-main/src/Components/Sidebar/Sidebar.css
+++ b/Insurance-app-main/src/Components/Sidebar/Sidebar.css
@@ -76,6 +76,10 @@
     font-size: 20px;
   }
 
+  .sidebar-ul-list{
+    list-style: none;
+  }
+
   @media only screen and (min-width:501px) and (max-width:768px){
     .sidebar-list-logout{
       display: none;
