--- a/Insurance-app-main/src/Components/Setting.css
+++ b/Insurance-app-main/src/Components/Setting.css
@@ -11,9 +11,9 @@
 .company-details-form-container {
   width: 550px;
   padding: 40px 35px;
-  background: linear-gradient(to right, #a2ecec, #c4f5f5, #e1fafa);
+   background-color:gainsboro; 
   border-radius: 24px;
-  box-shadow: 0 25px 60px rgba(0, 0, 0, 0.15);
+  box-shadow: 10px 10px 10px 10px rgba(0, 0, 0, 0.15);
   animation: fadeIn 0.8s ease-in-out;
   margin-top: 20px;
   backdrop-filter: blur(8px);
@@ -24,7 +24,7 @@
   text-align: center;
   font-size: 32px;
   margin-bottom: 35px;
-  color: #004d4d;
+  color:navy;
   font-weight: 700;
   letter-spacing: 1.2px;
 }
@@ -36,7 +36,7 @@
   border: none;
   border-bottom: 2px solid #ffffffcc;
   background-color: transparent;
-  color: #004d4d;
+  color: navy;
   font-size: 16px;
   font-weight: 600;
   outline: none;
@@ -44,7 +44,7 @@
 }
 
 .input-text-box:focus {
-  border-bottom: 2px solid teal;
+  border-bottom: 2px solid navy;
   background-color: transparent;
   box-shadow: 0 2px 8px rgba(0, 128, 128, 0.15);
 }
@@ -55,7 +55,7 @@
 }
 
 .save {
-  background: linear-gradient(135deg, #00796b, #26a69a);
+  background: linear-gradient(135deg, navy,rgb(110, 110, 206));
   color: white;
   padding: 16px;
   border: none;
